# quantize

./: README.md  onset_video.py  pyproject.toml  quantize.py  requirements.txt
tests/: conftest.py  test_onset_video.py  test_quantize.py
