[project]
name = "quantize"
version = "0.2.0"
description = "Audio BPM quantizer and onset-synced video builder"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
    "moviepy>=2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
stretch = ["pyrubberband>=0.3"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
